--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!Doctype HTML>
 <html>
     <head>
-        <title>Hello, world!</title>
+        <title>Fieme</title>
     </head>
     <body>
-        <h1>Hello, world!</h1>
+        <h1>Under construction</h1>
+        <p>Nothing to see here yet!</p>
     </body>
 </html>
