--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Under construction</h1>
         <p>Nothing to see here yet!</p>
+        <meta http-equiv="refresh" content="0; URL=https://github.com/vlOd2" />
     </body>
 </html>
